# knowledge-base-engine

./: .gitignore  README.md  advanced_chunking.py  chunking_demo.py  kbe_config.example.toml  main.py  pyproject.toml  query_embeddings.py  test_embeddings.py  text_embeddings_processor.py
src/chunking/: __init__.py  advanced_chunking.py  text_chunker.py
src/config/: config.py
src/embedding/: ollama.py
src/storage/: __init__.py  postgres.py
tests/chunking/: test_adaptive_chunking_strategy.py  test_chunking_strategy_factory.py  test_gradient_chunking_strategy.py  test_paragraph_chunking_strategy.py  test_semantic_chunking_strategy.py  test_sentence_chunking_strategy.py  test_text_chunker.py
